@@ -3,6 +3,7 @@
                           -------------------
     begin                : Sat Aug 14 19:19:31 CDT 2004
     copyright            : (C) 2005 by Andrew Ruder
+                         : (C) 2015 The GNUstep Application Project
     email                : aeruder@ksu.edu
  ***************************************************************************/
 
@@ -107,16 +108,16 @@ NSString *GNUstepOutputAliases = @"GNUstepOutputAliases";
 	NSWindow *tempWindow;
 
 	tempWindow = (NSWindow *)preferencesView;
-	preferencesView = RETAIN([tempWindow contentView]);
-	RELEASE(tempWindow);
+	preferencesView = [[tempWindow contentView] retain];
+	[tempWindow release];
 	[preferencesView setAutoresizingMask:
 	  NSViewWidthSizable | NSViewHeightSizable];
 }
 - (void)dealloc
 {
 	[[NSNotificationCenter defaultCenter] removeObserver: self];
-	RELEASE(preferencesView);
-	RELEASE(preferencesIcon);
+	[preferencesView release];
+	[preferencesIcon release];
 	[super dealloc];
 }
 - (void)setText: (NSTextField *)aField
