@@ -23,6 +23,13 @@
 	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerInFilter.m
 	* Output/GNUstepOutput/Models/Channel.m
 	* Output/GNUstepOutput/Views/AttributedTabViewItem.m
+	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerNumericCommands.m
+	* Output/GNUstepOutput/Controllers/ContentControllers/Tab/TabMasterController.m
+	* Output/GNUstepOutput/Controllers/Preferences/BundlePreferencesController.m
+	* Output/GNUstepOutput/Controllers/Preferences/ColorPreferencesController.m
+	* Output/GNUstepOutput/Controllers/Preferences/FontPreferencesController.m
+	* Output/GNUstepOutput/Controllers/Preferences/GeneralPreferencesController.m
+	* Output/GNUstepOutput/Controllers/Preferences/PreferencesController.m
 	Replace GS memory macros
 
 2015-02-14 Riccardo Mottola <rm@gnu.org>
